--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.Accout-Header{
+
+  color: #282c34;
+}
+
+
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
